Modify : mysql 링커 문제 해결

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .vs
+/Server/Server/x64/Debug/LoginServer.tlog/link.command.1.tlog
+/Server/Server/x64/Debug/LoginServer.tlog/CL.command.1.tlog
+/Server/Server/x64/Debug/LoginServer.tlog/LoginServer.lastbuildstate
