--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Server/Server/x64/Debug/LoginServer.tlog/link.command.1.tlog
 /Server/Server/x64/Debug/LoginServer.tlog/CL.command.1.tlog
 /Server/Server/x64/Debug/LoginServer.tlog/LoginServer.lastbuildstate
+/StackGrowth_clone_0
